@@ -1,3 +1,6 @@
+Sun Feb 10 21:00:37 BRT 2019
+	Added example for how to compress a chunked HTTP response. -SC
+
 Sun 10 Feb 2019 05:03:44 PM CET
 	Releasing libmicrohttpd 0.9.63. -CG
 
